@@ -1,3 +1,5 @@
+ - Add optional test to check if a dependency already exists (Sparsity)
+ - Modify sparse matrix output (Matrix::show())
  - Add FGMRES solver in new format (patch from eriksv)
  - Add non-const version of quick-access of sparse matrices
  - Add linear mappings for simple computation of derivatives
